Correction de la gestion du login coté front et du problème de COrs